--- a/medcheck-main/home.html
+++ b/medcheck-main/home.html
@@ -29,6 +29,7 @@
     #button-container {
       text-align: center;
       margin-top: 50px;
+
     }
     #quote {
       color: white;
@@ -44,6 +45,9 @@
       border: none;
       border-radius: 5px;
       cursor: pointer;
+    }
+    #button-container a {
+      padding-right: 15px;
     }
   </style>
 </head>
