--- a/medcheck-main/signup.html
+++ b/medcheck-main/signup.html
@@ -77,7 +77,7 @@
     <!-- Include the PHP file -->
     <form action="login.php" method="post">
         <img id="logo" src="logo1.png" alt="Logo">
-        <h2>Login</h2>
+        <h2>Signup</h2>
         <label for="username">Username</label>
         <input type="text" id="username" name="username" required>
 
@@ -105,6 +105,12 @@
 
             // If validation passes, allow form submission
             return true;
+        function resetForm() {
+            document.getElementById("signupForm").reset();
+        }
+
+        // Call resetForm function after form submission
+        document.getElementById("signupForm").addEventListener("submit", resetForm);
         }
     </script>
 </body>
