--- a/medcheck-main/signup.html
+++ b/medcheck-main/signup.html
@@ -74,8 +74,7 @@
     </style>
 </head>
 <body>
-    <!-- Include the PHP file -->
-    <form action="login.php" method="post">
+    <form action="signup.php" method="post">
         <img id="logo" src="logo1.png" alt="Logo">
         <h2>Signup</h2>
         <label for="username">Username</label>
